# sam3d_asset_extractor

./: .gitignore  INSTALL.md  README.md  pyproject.toml  requirements-sam3d-runtime.txt  requirements.txt  run_pipeline.sh
datas/move_fruits_into_bowl/: cam_K.txt
scripts/: setup_envs.sh  setup_externals.sh
src/sam3d_asset_extractor/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  paths.py  preflight.py
src/sam3d_asset_extractor/common/: __init__.py  camera.py  depth.py  geometry.py  ply_io.py
src/sam3d_asset_extractor/mesh/: __init__.py  decimate.py
src/sam3d_asset_extractor/sam2_mask/: __init__.py  _common.py  auto.py  manual.py  runner.py
src/sam3d_asset_extractor/sam3d/: __init__.py  export.py  inference.py  pointmap.py  pose.py  runner.py
tests/: conftest.py  test_camera.py  test_cli_help.py  test_cli_orchestration.py  test_config.py  test_decimate.py  test_depth.py  test_geometry.py  test_ply_io.py  test_pose.py  test_sam2_runner.py  test_sam3d_runner.py
